# hfnn

./: .gitignore  LICENSE  README.md  hfnn.cabal  stack.yaml
src/AI/: HFNN.hs
src/AI/HFNN/: Activation.hs  Bayesian.hs  Convolutional.hs  Internal.hs
test/: Spec.hs
