name:                hfnn
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/quickdudley/hfnn#readme
license:             BSD3
license-file:        LICENSE
author:              Jeremy List
maintainer:          quick.dudley@gmail.com
copyright:           BSD3
category:            Machine Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AI.HFNN,
                       AI.HFNN.Activation,
                       AI.HFNN.Internal,
                       AI.HFNN.Convolutional
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       array,
                       random,
                       gl
  default-language:    Haskell2010

test-suite hfnn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       random,
                       hfnn
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/quickdudley/hfnn
